--- a/index.html
+++ b/index.html
@@ -1,143 +1,89 @@
-﻿<!DOCTYPE html>
-<html lang="bn">
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Natural Animation Demo</title>
-<style>
-  body {
-    margin: 0;
-    background: linear-gradient(to top, #87ceeb 0%, #a2d149 100%);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    overflow-x: hidden;
-  }
-  h1 {
-    text-align: center;
-    margin: 20px 0;
-    color: #154734;
-  }
-  .scene {
-    position: relative;
-    width: 90%;
-    max-width: 900px;
-    height: 300px;
-    margin: 0 auto;
-    background: linear-gradient(to top, #7bc950 0%, #b3e676 60%, #87ceeb 100%);
-    border-radius: 15px;
-    box-shadow: 0 0 15px #2d5a1e88;
-    overflow: hidden;
-  }
-
-  /* Tree */
-  .tree {
-    position: absolute;
-    bottom: 20px;
-    left: 50px;
-    width: 50px;
-    height: 120px;
-    background: linear-gradient(to top, #3a5a15 0%, #6aa84f 100%);
-    border-radius: 30px 30px 10px 10px;
-    animation: sway 4s ease-in-out infinite;
-    box-shadow: inset 0 10px 20px #4a6e1f;
-  }
-  .tree::before {
-    content: "";
-    position: absolute;
-    bottom: 110px;
-    left: -30px;
-    width: 110px;
-    height: 110px;
-    background: radial-gradient(circle at center, #2d5a1e 60%, transparent 80%);
-    border-radius: 50%;
-    animation: sway 4s ease-in-out infinite;
-    animation-delay: 1s;
-  }
-
-  @keyframes sway {
-    0%, 100% { transform: rotate(0deg); }
-    50% { transform: rotate(4deg); }
-  }
-
-  /* Road */
-  .road {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 40px;
-    background: repeating-linear-gradient(
-      to right,
-      #444, #444 30px,
-      #bbb 30px, #bbb 50px
-    );
-  }
-
-  /* Car */
-  .car {
-    position: absolute;
-    bottom: 10px;
-    width: 60px;
-    height: 30px;
-    background: #e53935;
-    border-radius: 10px 10px 5px 5px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.4);
-    animation: drive 7s linear infinite;
-  }
-  .car::before {
-    content: "";
-    position: absolute;
-    top: 6px;
-    left: 10px;
-    width: 10px;
-    height: 10px;
-    background: #ffeb3b;
-    border-radius: 50%;
-    box-shadow: 35px 0 #ffeb3b;
-  }
-  @keyframes drive {
-    0% { left: -70px; }
-    100% { left: 100%; }
-  }
-
-  /* Soldier */
-  .soldier {
-    position: absolute;
-    bottom: 40px;
-    left: 200px;
-    width: 35px;
-    height: 80px;
-    background: linear-gradient(to top, #4d4d4d 0%, #698e25 100%);
-    border-radius: 10px;
-    box-shadow: inset 0 0 15px #496622;
-    animation: march 4s ease-in-out infinite;
-  }
-  .soldier::before {
-    content: "";
-    position: absolute;
-    bottom: 75px;
-    left: 6px;
-    width: 23px;
-    height: 23px;
-    background: #f9ddb7;
-    border-radius: 50%;
-    border: 2px solid #554433;
-  }
-  @keyframes march {
-    0%, 100% { left: 200px; }
-    50% { left: 220px; }
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>3D Country Game</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
 </head>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
+  <script>
+    const scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x87ceeb);
 
-<h1>বাংলাদেশ গেম - Natural Animation Demo</h1>
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 5, 10);
 
-<div class="scene">
-  <div class="tree"></div>
-  <div class="road"></div>
-  <div class="car"></div>
-  <div class="soldier"></div>
-</div>
+    const renderer = new THREE.WebGLRenderer({antialias:true});
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
+
+    const light = new THREE.DirectionalLight(0xffffff, 1);
+    light.position.set(5,10,7);
+    scene.add(light);
+
+    const groundGeo = new THREE.PlaneGeometry(50, 50);
+    const groundMat = new THREE.MeshLambertMaterial({color:0x228B22});
+    const ground = new THREE.Mesh(groundGeo, groundMat);
+    ground.rotation.x = -Math.PI/2;
+    scene.add(ground);
+
+    const trunkGeo = new THREE.CylinderGeometry(0.2, 0.2, 2, 12);
+    const trunkMat = new THREE.MeshLambertMaterial({color:0x8B4513});
+    const trunk = new THREE.Mesh(trunkGeo, trunkMat);
+    trunk.position.set(-5, 1, 0);
+    scene.add(trunk);
+
+    const leavesGeo = new THREE.SphereGeometry(1, 16, 16);
+    const leavesMat = new THREE.MeshLambertMaterial({color:0x006400});
+    const leaves = new THREE.Mesh(leavesGeo, leavesMat);
+    leaves.position.set(-5, 3, 0);
+    scene.add(leaves);
+
+    const buildingGeo = new THREE.BoxGeometry(3, 5, 3);
+    const buildingMat = new THREE.MeshLambertMaterial({color:0x808080});
+    const building = new THREE.Mesh(buildingGeo, buildingMat);
+    building.position.set(5, 2.5, 0);
+    scene.add(building);
+
+    const roadGeo = new THREE.PlaneGeometry(10, 2);
+    const roadMat = new THREE.MeshLambertMaterial({color:0x333333});
+    const road = new THREE.Mesh(roadGeo, roadMat);
+    road.rotation.x = -Math.PI/2;
+    road.position.set(0, 0.01, 0);
+    scene.add(road);
+
+    const loader = new THREE.GLTFLoader();
+    loader.load('https://threejs.org/examples/models/gltf/Soldier.glb', function(gltf) {
+      const model = gltf.scene;
+      model.scale.set(1, 1, 1);
+      model.position.set(0, 0, 0);
+      scene.add(model);
+    }, undefined, function(error) {
+      console.error(error);
+    });
+
+    function animate() {
+      requestAnimationFrame(animate);
+      controls.update();
+      renderer.render(scene, camera);
+    }
+    animate();
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth/window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
 </body>
 </html>
